[refactor] rename to 'Pimp My Deck!'

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Steam Deck Resources</title>
+    <title>Pimp My Deck!</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
